unpackaged/main/default/objects/Order/fields/Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Street__c</fullName>
    <label>Delivery Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>