unpackaged/main/default/objects/Order/fields/Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_End_Date__c</fullName>
    <formula>Exhibition__r.Occurrence_Close_Date__c</formula>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>