unpackaged/main/default/objects/Order/fields/Pickup_Country__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Country__c</fullName>
    <label>Pickup Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>