unpackaged/main/default/objects/Order/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>