unpackaged/main/default/objects/Order/recordTypes/EMEA_Visit_Order.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Visit_Order</fullName>
    <active>true</active>
    <description>EMEA Visit Order</description>
    <label>EMEA Visit Order</label>
</RecordType>