unpackaged/main/default/objects/Order/validationRules/EMEA_Visit_Poken_Ready_to_Ship.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Visit_Poken_Ready_to_Ship</fullName>
    <active>true</active>
    <description>Requires delivery address to change Order status to &quot;Ready to Ship&quot;.</description>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Ready to Ship&quot;) &amp;&amp;
(ISBLANK( Delivery_City__c  )  || 
 ISBLANK( Delivery_Country__c  )  ||  
 ISBLANK( Delivery_Street__c  )  || 
 ISBLANK( Delivery_Zip_Postal_Code__c  )  || 
 ISBLANK( Delivery_State__c  )  
)</errorConditionFormula>
    <errorMessage>Delivery address required to change Order status to &quot;Ready to Ship&quot;.</errorMessage>
</ValidationRule>